# simple_shared_lib

./: CMakeLists.txt  README.md  cool_lib.h  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/simplesharedlib/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cool_lib.cpp  cool_lib.h  native-lib.cpp
app/src/main/cpp/lib/: random_factorial.cpp  random_factorial.h
app/src/main/java/com/simplesharedlib/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/simplesharedlib/: ExampleUnitTest.kt
cmake/: Config.cmake.in
gradle/wrapper/: gradle-wrapper.properties
lib/: random_factorial.cpp
test_app/: CMakeLists.txt  README.md  app.cpp
